--- a/Assets/css/estilos.css
+++ b/Assets/css/estilos.css
@@ -20,7 +20,7 @@
 
 
 .logo{
-   width: 35%
+   width: 30vh;
 
 }
 
@@ -186,7 +186,7 @@ main p{
 }
 
 .text{
-  font-size: 100%;
+  font-size: 3vh;
   color: black;
   font-weight: bold;
   display: flex;
@@ -218,21 +218,24 @@ header nav{
      display: flex;
      flex-direction: column;
      align-items: flex-start;
+
    }
+
    .logo_nav {
    display: flex;
    justify-content: space-evenly;
    flex-direction: row;
-   width: 78%;
+   width: 40vh;
    align-items: flex-start;
    }
 
    .item{
      padding: 1px;
+
    }
 
    .logo {
-    width: 40%;
+    width: 20vh;
 }
 .logo_a{
   padding: 0px;
@@ -245,4 +248,38 @@ a:hover{
     h2 {
       font-size: 20px;
      }
+     main p{
+         text-align: center;
+         margin: 24px;
+        }
+.text{
+    font-size: 2vh;
+    }
+
+.social-icons{
+  height: 12vh;
 }
+
+    .guasa, .insta, .face {
+        opacity: 0.7;
+        margin: 7px;
+    }
+
+}
+
+@media screen and (max-width: 300px) {
+  .logo {
+   width: 14vh;
+   margin-left: 3vh;
+   }
+
+   header nav ul{
+     font-size: 7px;
+     font-weight: bold;
+       }
+       .item{
+         padding: 5px;
+
+       }
+
+   }
